--- a/www.lvpei.org/index.html
+++ b/www.lvpei.org/index.html
@@ -142,7 +142,11 @@
     
     </title>
 
-
+<script
+  src="https://app.livechatai.com/embed.js"
+  data-id="cmf8ftraj0001kz0bzybl1lf9"
+  async defer>
+</script>
 
   </head>
 
@@ -2347,8 +2351,6 @@
   ga('send', 'pageview');
 
 </script>
-<!-- TinyChat Embed -->
-<script data-id="" src="https://tinychat.ai/tinychat.js" async defer></script>
 </body>
 
 <!-- Mirrored from www.lvpei.org/ by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 06 Sep 2025 09:27:00 GMT -->
